--- a/configFiles/config-solid-variable-priorities.json
+++ b/configFiles/config-solid-variable-priorities.json
@@ -6,7 +6,6 @@
     "https://linkedsoftwaredependencies.org/bundles/npm/@comunica/actor-rdf-resolve-hypermedia-links-queue-wrapper-limit-count/^0.0.0/components/context.jsonld",
     "https://linkedsoftwaredependencies.org/bundles/npm/@comunica/actor-rdf-resolve-hypermedia-links-queue-wrapper-limit-depth/^0.0.0/components/context.jsonld",
     "https://linkedsoftwaredependencies.org/bundles/npm/@comunica/actor-rdf-resolve-hypermedia-links-queue-solid-link-prioritisation/^0.0.0/components/context.jsonld"
-    
   ],
   
   "import": [
@@ -16,7 +15,7 @@
     "ccqslt:config/extract-links/actors/predicates-solidstorage.json",
     "ccqslt:config/extract-links/actors/quad-pattern-query.json",
     "ccqslt:config/extract-links/actors/solid-type-index.json"
-  ],
+    ],
   "@id": "urn:comunica:default:Runner",
   "@type": "Runner",
   "actors": [
@@ -25,14 +24,13 @@
       "@type": "ActorRdfResolveHypermediaLinksQueueSolidLinkPrioritisation",
       "beforeActors": { "@id": "urn:comunica:default:rdf-resolve-hypermedia-links-queue/actors#fifo" },
       "possibleLinkSources": [
-      "typeIndex", 
-      "http://www.w3.org/ns/ldp#contains",
       "http://www.w3.org/ns/pim/space#storage", 
-      "cMatch", 
-      "cAll", 
+      "http://xmlns.com/foaf/0.1/isPrimaryTopicOf",
+      "cMatch",
       "http://www.w3.org/2000/01/rdf-schema#seeAlso",
+      "http://www.w3.org/ns/ldp#contains",
       "http://www.w3.org/2002/07/owl##sameAs",
-      "http://xmlns.com/foaf/0.1/isPrimaryTopicOf"
+      "typeIndex"
       ],
       "mediatorRdfResolveHypermediaLinksQueue": { "@id": "urn:comunica:default:rdf-resolve-hypermedia-links-queue/mediators#main" }
     }
